# agimus-demos

./: .gitmodules  CMakeLists.txt  package.xml  plugin.xml
scripts/: publish_camera_extrinsics.py  rqt_camera_calibration
src/: CMakeLists.txt  contact-simulation.cc  contact-simulation.hh
src/agimus_demos/: in_state_planner.py  tools_hpp.py
src/agimus_demos/calibration/: __init__.py  hand_eye_calibration.py  play_path.py
src/rqt_agimus/: camera_calibration.py
urdf/: chessboard_10x7_27mm.urdf
